@@ -3,6 +3,7 @@ Revision history for DBIx::Class
     * Fixes
         - Fix incorrect collapsing-parser source being generated in the
           presence of unicode data among the collapse-points
+        - Fix endless loop on BareSourcelessResultClass->throw_exception(...)
 
     * Misc
         - Depend on newer Moo, fixing some interoperability issues:
